--- a/app/views/tenon/settings/_general.html.haml
+++ b/app/views/tenon/settings/_general.html.haml
@@ -1,6 +1,6 @@
 .fields.large.tabs
   .form-label General
-  .panel.block
+  .panel--block
     .row
       .form-field.inner6
         %label.field-label Site Name
