--- a/app/views/tenon/styleguides/_colors.html.haml
+++ b/app/views/tenon/styleguides/_colors.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'colors'}
   %h3.color-black Colors
 
-  .panel.block
+  .panel--block
     %h4 Neutral colors
     .styleguide-colors
       .styleguide-color-block
