--- a/app/views/tenon/styleguides/_typography.html.haml
+++ b/app/views/tenon/styleguides/_typography.html.haml
@@ -4,7 +4,7 @@
   %h3.color-black Headers
   %p Includes mixins, variables and a class helpers for each.
 
-  .panel.block
+  .panel--block
     - (1..6).each do |h|
       %p{class: "font-h#{h}"} The quick brown fox jumps over the lazy dog.
       %code.expandable
