--- a/app/views/tenon/styleguides/colors/_helpers.html.haml
+++ b/app/views/tenon/styleguides/colors/_helpers.html.haml
@@ -3,7 +3,7 @@
   %h3.color-black Color class helpers
   %p To ease the styling of on-the-fly color changes in generated layouts.
 
-  .panel.block
+  .panel--block
     %h4 Base
     %p
       Available for the following color names:
