--- a/app/views/tenon/styleguides/colors/_variables.html.haml
+++ b/app/views/tenon/styleguides/colors/_variables.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'color__variables'}
   %h3.color-black Color variables
 
-  .panel.block
+  .panel--block
     %h4 Names
     %p
       These are the 10 base colors that are used throughtout Tenon.
