--- a/app/views/tenon/styleguides/forms/_html5.html.haml
+++ b/app/views/tenon/styleguides/forms/_html5.html.haml
@@ -4,7 +4,7 @@
   %p
     These are HTML5 specific and might not work for every app (i.e. IE). But
     they are available in Tenon.
-  .panel.block
+  .panel--block
     = f.number_field :number, label: 'Number field', placeholder: 'i.e. 1234'
     %code
       %p f.number_field :number, label: 'Number field', placeholder: 'i.e. 1234'
