--- a/app/views/tenon/styleguides/typography/_styles.html.haml
+++ b/app/views/tenon/styleguides/typography/_styles.html.haml
@@ -3,7 +3,7 @@
   %h3.color-black Style class helpers
   %p Class helpers that can also @extend it in a Sass file.
 
-  .panel.block
+  .panel--block
     - [3, 4, 7].each do |s|
       %p{class: "font-n#{s}"} The quick brown fox jumps over the lazy dog.
       %code.expandable
