--- a/app/views/tenon/styleguides/typography/_variables.html.haml
+++ b/app/views/tenon/styleguides/typography/_variables.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'typography__variables'}
   %h3.color-black Typography variables & mixins
 
-  .panel.block
+  .panel--block
     %h4 Fonts
     %p
       There is one font defined for Tenon. There is a second variable defined
