--- a/app/assets/stylesheets/tenon/filter-toggle.scss
+++ b/app/assets/stylesheets/tenon/filter-toggle.scss
@@ -1,10 +1,10 @@
-.action-text.toggle-drawer {
+.action--text.toggle-drawer {
   top: -1px;
   padding: 2px 8px;
   &:hover {
-    text-decoration: none;
-    color: $white;
     border-radius: $default-border-radius;
     background-color: $link-color;
+    text-decoration: none;
+    color: $white;
   }
 }
