--- a/app/assets/stylesheets/tenon/panel.scss
+++ b/app/assets/stylesheets/tenon/panel.scss
@@ -3,39 +3,10 @@
   position: relative;
   overflow: hidden;
   background-color: $panel-bg-color;
-
-  &.with-btn-fab {
-    top: $btn-fab-size / 2;
-  }
-
-  &.block {
-    margin-bottom: $default-spacing;
-    padding: $default-spacing/2 $default-spacing;
-  }
 }
 
-
-.panel.record {
-  @include default-transition;
-  width: 100%;
-  margin-bottom: 1px;
-  padding: ($default-spacing / 2) $default-spacing;
-  opacity: .7;
-
-  &:hover {
-    @include z-depth-1;
-    opacity: 1;
-    .record-details .actions {
-      opacity: .9;
-    }
-  }
-
-  &.is-expanded {
-    width: 104%;
-    margin: 1px -2%;
-  }
-
-  .expand-record {
-    cursor: pointer;
-  }
+.panel--block {
+  @extend .panel;
+  margin-bottom: $default-spacing;
+  padding: $default-spacing/2 $default-spacing;
 }
