--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -1,7 +1,7 @@
 = render 'tenon/shared/burger'
 
 .account
-  = link_to '#!', class: 'account-notifications action-icon dropdown-button', data: { activates: 'notification-dropdown'} do
+  = link_to '#!', class: 'account-notifications action--icon dropdown-button', data: { activates: 'notification-dropdown'} do
     = i('notifications_none')
 
   %ul.dropdown-content#notification-dropdown
@@ -20,7 +20,7 @@
         = i('notifications_none')
         None Icon
 
-  = link_to '#!', class: 'account-avatar action-icon dropdown-button', data: { activates: 'current-user-dropdown'} do
+  = link_to '#!', class: 'account-avatar action--icon dropdown-button', data: { activates: 'current-user-dropdown'} do
     = i('face')
 
   %ul.dropdown-content#current-user-dropdown
