--- a/app/views/tenon/styleguides/buttons/_colors.html.haml
+++ b/app/views/tenon/styleguides/buttons/_colors.html.haml
@@ -6,7 +6,7 @@
   -#   Use these classes on any HTML element that you would like to look and
   -#   act like a button. Can be used with any button color class below.
   -#
-  -# .panel.block
+  -# .panel--block
   -#   %mh4 Standard Button
   -#   %p
   -#     %button{type: 'button', class: 'btn'}
