--- a/app/views/tenon/styleguides/forms/_outside.html.haml
+++ b/app/views/tenon/styleguides/forms/_outside.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'forms__outside'}
   %h3.color-black Form elements that live outside of a panel
   %p
-    Form elements are generally confined to a panel div (.panel.block). Here
+    Form elements are generally confined to a panel div (.panel--block). Here
     are all the form elements that can live outside of a panel.
 
   = f.text_field :text, class: 'form-title-field', placeholder: 'A sample title field'
