--- a/app/assets/stylesheets/tenon/mixins/truncate.scss
+++ b/app/assets/stylesheets/tenon/mixins/truncate.scss
@@ -1,4 +1,4 @@
-@mixin truncate {
+%truncate {
   overflow: hidden;
   width: 100%;
   white-space: nowrap;
@@ -6,5 +6,5 @@
 }
 
 .truncate {
-  @include truncate;
+  @extend %truncate;
 }
