--- a/app/assets/stylesheets/tenon/variables/font-family.scss
+++ b/app/assets/stylesheets/tenon/variables/font-family.scss
@@ -1,12 +1,12 @@
 // Import icons font(s):
-$font-icon: "Material Icons";
+$font-icon: 'Material Icons';
 
 // Import font(s):
-@import "//fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic";
+@import '//fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic';
 
 // Font family:
-$font-primary: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
-$font-secondary: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
+$font-primary: 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+$font-secondary: 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
 
 // Font family:
 $font-family-body: $font-primary;
