--- a/app/assets/stylesheets/tenon/flash.scss
+++ b/app/assets/stylesheets/tenon/flash.scss
@@ -16,7 +16,7 @@
     margin-bottom: 0;
   }
   ul {
-    @include font-small;
+    @extend %font-small;
     margin: 0 $default-spacing;
     padding: $default-spacing/2 0;
     li {
