--- a/app/assets/stylesheets/tenon/main-nav-toggle.scss
+++ b/app/assets/stylesheets/tenon/main-nav-toggle.scss
@@ -1,5 +1,5 @@
 .main-nav-toggle {
-  @include default-transition;
+  @extend %default-transition;
   position: fixed;
   z-index: $z-nav-toggle;
   top: $default-spacing/2;
