singularize material-icons

--- a/app/assets/stylesheets/tenon/material-icon.scss
+++ b/app/assets/stylesheets/tenon/material-icon.scss
@@ -4,7 +4,7 @@ $dropdown-icon-size: 22;
 $main-nav-icon-size: 22;
 
 //* Docs: https://design.google.com/icons/ *//
-.material-icons {
+.material-icon {
   display: inline-block;
   width: 1em;
   height: 1em;
