--- a/app/views/tenon/styleguides/_icons.html.haml
+++ b/app/views/tenon/styleguides/_icons.html.haml
@@ -14,7 +14,7 @@
         = i(icon)
       %code.expandable
         = expandable_toggle
-        %p= "<i class='material-icons'>#{icon}</i>"
+        %p= "<i class='material-icon'>#{icon}</i>"
         %br/
         %p
           %span.color-primary Ruby:
