--- a/app/views/tenon/styleguides/buttons/_styles.html.haml
+++ b/app/views/tenon/styleguides/buttons/_styles.html.haml
@@ -55,5 +55,5 @@
         = i('edit')
 
     %code
-      %p= "<a href='#' class='btn-fab'><i class='material-icons'>add</i></a>"
-      %p= "<a href='#' class='btn-fab-reverse'><i class='material-icons'>edit</i></a>"
+      %p= "<a href='#' class='btn-fab'><i class='material-icon'>add</i></a>"
+      %p= "<a href='#' class='btn-fab-reverse'><i class='material-icon'>edit</i></a>"
