--- a/app/views/tenon/shared/_version_warning.html.haml
+++ b/app/views/tenon/shared/_version_warning.html.haml
@@ -11,4 +11,4 @@
         %strong "#{@item_version.title}"
       was created on #{@item_version.created_at.strftime('%m/%d/%Y at %l:%M %p')}
       by #{@item_version.user.try(:email)}
-  = link_to content_tag(:i, 'close', class: 'material-icons'), '#', id: 'flash-dismiss'
+  = link_to content_tag(:i, 'close', class: 'material-icon'), '#', id: 'flash-dismiss'
