--- a/app/views/tenon/tenon_content/_row.html.haml
+++ b/app/views/tenon/tenon_content/_row.html.haml
@@ -2,13 +2,13 @@
   = f.hidden_field :item_method, value: field
   .tn-tc-topbar
     .actions
-      %i.material-icons.reorder reorder
+      %i.material-icon.reorder reorder
 
       = link_to '#', class: 'tn-tc-open-library above', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_title: "Insert Content", modal_handler: 'Tenon.features.tenonContent.Library', modal_clone: 'true', tooltip: '' }, title: 'Insert Content' do
-        %i.material-icons playlist_add
+        %i.material-icon playlist_add
 
       = link_to_remove_association f, { 'data-confirm' => 'Are you sure?', 'data-wrapper-class' => 'tn-tc-row' } do
-        %i.material-icons.delete delete
+        %i.material-icon.delete delete
 
     .spacer
 
@@ -17,4 +17,4 @@
   .tn-tc-bottombar
     .actions
       = link_to '#', class: 'tn-tc-open-library below', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_title: "Insert Content", modal_handler: 'Tenon.features.tenonContent.Library', modal_clone: 'true', modal_closest: '.tn-tc', tooltip: ''}, title: 'Insert Content' do
-        %i.material-icons playlist_add
+        %i.material-icon playlist_add
