--- a/app/assets/stylesheets/tenon/dropdown-content.scss
+++ b/app/assets/stylesheets/tenon/dropdown-content.scss
@@ -1,5 +1,5 @@
 .dropdown-content {
-  @include z-depth-1;
+  @extend %z-depth-2;
   position: absolute;
   z-index: $z-kebab-dropdown;
   display: none;
