--- a/app/assets/stylesheets/tenon/flash.scss
+++ b/app/assets/stylesheets/tenon/flash.scss
@@ -1,6 +1,6 @@
 // Flash messages
 .flash {
-  @include z-depth-1;
+  @extend %z-depth-2;
   position: absolute;
   z-index: $z-flash-message;
   top: $util-nav-height;
