--- a/app/assets/stylesheets/tenon/panel.scss
+++ b/app/assets/stylesheets/tenon/panel.scss
@@ -1,12 +1,12 @@
 .panel {
-  @include z-depth-1;
   position: relative;
-  overflow: hidden;
   background-color: $panel-bg-color;
+  overflow: hidden;
+  @extend %z-depth-1;
 }
 
 .panel--block {
-  @extend .panel;
   margin-bottom: $default-spacing;
   padding: $default-spacing/2 $default-spacing;
+  @extend .panel;
 }
