--- a/app/assets/stylesheets/tenon/styleguide/colors.scss
+++ b/app/assets/stylesheets/tenon/styleguide/colors.scss
@@ -3,14 +3,14 @@
   margin-bottom: $default-spacing;
 }
 .styleguide-color-block {
-  @include z-depth-1;
+  @extend %z-depth-2;
   float: left;
   margin-right: $default-spacing/3;
   padding: $default-spacing/3;
   border: 1px solid $grey;
 
   .styleguide-color {
-    @include z-depth-1;
+    @extend %z-depth-2;
     display: block;
     width: $default-spacing*2;
     height: $default-spacing*2;
