--- a/app/assets/stylesheets/tenon/variables/font-family.scss
+++ b/app/assets/stylesheets/tenon/variables/font-family.scss
@@ -18,4 +18,4 @@ $font-family-h5: $font-primary;
 $font-family-h6: $font-primary;
 
 // Margin bottom:
-$default-margin: $default-spacing/2;
+$default-margin: 20px;
