--- a/app/assets/stylesheets/tenon/record.scss
+++ b/app/assets/stylesheets/tenon/record.scss
@@ -57,7 +57,9 @@
   color: $primary-fg-color;
   @extend .action--icon;
   @include bp-md {
-    @include vertical-align;
+    position: relative;
+    top: 50%;
+    @include transform(translateY(-50%));
   }
 
   &:hover {
